...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnPrevious"
            android:layout_width="@dimen/margin_20"
            android:layout_height="@dimen/margin_80"
            app:cardBackgroundColor="@color/viewPagerSliderColor"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
                android:layout_gravity="center"
                android:contentDescription="@string/leftSlideDesc"
                android:src="@drawable/ic_slide_left" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnNext"
            android:layout_width="@dimen/margin_20"
            android:layout_height="@dimen/margin_80"
            app:cardBackgroundColor="@color/viewPagerSliderColor"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
